# mastino_rfm

./: .cproject  .project  CMakeLists.txt  README.md  encrypt.ps1  key_tsall.pem  mastino_partitions.csv  sdkconfig  sdkconfig.bak  sdkconfig.old  sdkconfig_old
components/espressif__esp_encrypted_img/: .component_hash  idf_component.yml
docs/: 33333  build-and-encrypt.ps1  decrypt_data.txt  encrypt_fixed.ps1  json_api_reference_updated.xlsx  mqtt_temp.c  mqtt_temp3.c  mqtt_temp4.c  mqtt_temp_2.c  sensors.c
docs/easy_scrypt/: encrypt.ps1
main/: CMakeLists.txt  aes.c  aes.h  base64.c  base64.h  ble_srv.c  ble_srv.h  config.c  config.h  devfunc.c  devfunc.h  dnsmulti.c  dnsmulti.h  dnsudp.c  dnsudp.h  ext_dev.c  ext_dev.h  function.c  function.h  global.h  global_var.c  gpio_all.c  gpio_all.h  led_strip_encoder.c  led_strip_encoder.h  local_handle.c  local_handle.h  main.c  mainfunc.c  mainfunc.h  mled.c  mled.h  mlist.c  mlist.h  mqttfunc.c  mqttfunc.h  otaflash.c  otaflash.h  pins.h  types.h  (+4 more)
